Bug fixes for 'thank you' screen not showing when form submits.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -138,6 +138,7 @@ main {
     margin-top: 0;
 }
 .message-input {
+    width: 100%;
     font-size: 2rem;
     padding: 2% 1%;
     box-sizing: border-box;
